// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom sheet Snapshots tests should match snapshot 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div />
  <div
    alfa-portal-container=""
  >
    <div
      class="wrapper"
      role="dialog"
      style="z-index: 100;"
      tabindex="-1"
    >
      <div
        style="opacity: 1;"
      >
        <div
          aria-hidden="true"
          class="backdrop appear appearActive"
        />
      </div>
      <div
        class="component appear appearActive"
        style="transition: transform 200ms ease-in-out;"
      >
        <div
          class="marker"
        />
        <div
          class="scrollableContainer withPadding"
        >
          <h2
            class="component title system-small bold"
          >
            Bottom sheet title
          </h2>
          <div
            class="content"
          >
            <div>
              Bottom sheet content
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Bottom sheet Snapshots tests should match snapshot with action button 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    alfa-portal-container=""
  >
    <div
      class="wrapper"
      role="dialog"
      style="z-index: 100;"
      tabindex="-1"
    >
      <div
        style="opacity: 1;"
      >
        <div
          aria-hidden="true"
          class="backdrop appear appearActive"
        />
      </div>
      <div
        class="component appear appearActive"
        style="transition: transform 200ms ease-in-out;"
      >
        <div
          class="marker"
        />
        <div
          class="scrollableContainer"
        >
          <h2
            class="component title system-small bold"
          >
            Bottom sheet title
          </h2>
          <div
            class="content"
          >
            <div>
              Bottom sheet content
            </div>
          </div>
          <div
            class="footer"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
